Modernize AbstractGeneratedTypeBuilder
Sprinkle nullness annotations and seal the type so it does not leak by
accident.

Change-Id: I60617c0a1428f2c8278c194d79a8fe292bad08f4
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>